--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
     </div>
 
     <div class="footer">
-        <a href="/privacy">Privacy Policy</a>
-        <a href="/terms">Terms of Service</a>
-        <a href="/contact">Contact</a>
+        <a href="/privacy.html">Privacy Policy</a>
+        <a href="/terms.html">Terms of Service</a>
+        <a href="/contact.html">Contact</a>
         © 2025 Unlocked LLC. All rights reserved.
     </div>
 
